--- a/backend/package.json
+++ b/backend/package.json
@@ -13,12 +13,13 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-validator": "^6.9.2",
     "gravatar": "^1.8.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.10",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
-    "validator": "^13.5.2"
+    "validator": "^9.4.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
